[tool.poetry]
name = "alayshah-me"
version = "0.1.0"
description = "Personal Website"
authors = ["Alay Shah <alay@stellarheal.com>"]
readme = "README.md"
packages = [{include = "alayshah"}]

[tool.poetry.dependencies]
python = "^3.11"
python-fasthtml = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
